--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<!-- <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script> -->
-		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+		<!-- <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script> -->
 		<script type="text/javascript" src="js/focus.js"></script>
-		<!-- <script src="js/jquery-1.11.0.min.js"></script> --><!-- 其实这是1.6.1 -->
+		<script src="js/jquery-1.11.0.min.js"></script><!-- 其实这是1.6.1 -->
 		<script type="text/javascript">
 			$(document).ready(function(){		        
 				// $(".learning").toggle(
